--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: CSCI 491 Senior Project I
-tagline: Howard CSCI 100 Class Website
+tagline: Howard CSCI 491 Senior Project I Class Website
 description: Intro to Computer Science
 author: Alexander Krentsel
 baseurl: '/csci491' # the subpath of your site, e.g. /blog
